# reframe

./: .gitignore  Brewfile  README.md  channels.py  detection.py  display.py  geometry.py  mediamtx.yml  modes.py  output.py  persistence.py  pyproject.toml  reframe.py  requirements.txt  server.py  smoothing.py  sources.py  state.py  tracking.py
console/: index.html
docs/: INFRA-PLAN.md  PLAN.md  ROADMAP.md  UI-PLAN.md  next.md  walkthrough.md
mockup/: index.html
scripts/: install-services.sh  uninstall-services.sh
