[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reframe"
version = "0.1.0"
description = "Live 4K -> 4x HD AI auto-reframing pipeline"
requires-python = ">=3.9"
dependencies = [
    "ultralytics>=8.2",
    "opencv-python>=4.9",
    "lap>=0.5.12",
]

[project.scripts]
reframe = "reframe:main"

[tool.setuptools]
py-modules = ["reframe", "smoothing", "geometry", "detection", "tracking", "modes", "display", "output"]
